--- a/gb/20/6/11/n12177059.md
+++ b/gb/20/6/11/n12177059.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fznrt2606/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fznrt2606/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fznrt2606/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fznrt2606/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fznrt2606/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fznrt2606/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fznrt2606/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fznrt2606/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/fznrt2606/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fznrt2606/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fznrt2606/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fznrt2606/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fznrt2606/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>华裔商家怕撤警 “那谁还敢开店？”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/06/099259c09b9a38c89ffd8429705b6830-600x400.jpg" />
 <h6>纽约曼哈顿华埠社区摆也街的云尚米线将门面全用木板包起来，只剩下一个取餐洞口，餐馆伙计只能从地下室进出。 (陈家龄提供)
 </h6>
 <hr>
-<p>【大纪元2020年06月11日讯】（大纪元记者施萍美国<ahref="https://github.com/fznrt2606/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>报导）自从5月25日明州黑人弗洛伊德（George Floyd）被白人警察肖文（Derek Chauvin）<ahref="https://github.com/fznrt2606/djy/blob/master/gb/tag/%E6%9A%B4%E5%8A%9B.md#1">暴力</a>执法致死后，掺杂暴力的抗议活动在全美延烧，尤其纽约市，出现了第五大道以及梅西百货等商家被打砸抢的暴力案件。纽约的华人商家们对此感到不安，有人抱怨警察已经对坏人“太软”以及“不管事”，如果被城市“<ahref="https://github.com/fznrt2606/djy/blob/master/gb/tag/%E6%92%A4%E8%B5%84.md#1">撤资</a>”，再继续减少警力，“那谁还敢开店？”</p>
+<p>【大纪元2020年06月11日讯】（大纪元记者施萍美国<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>报导）自从5月25日明州黑人弗洛伊德（George Floyd）被白人警察肖文（Derek Chauvin）<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%9A%B4%E5%8A%9B.md#1">暴力</a>执法致死后，掺杂暴力的抗议活动在全美延烧，尤其纽约市，出现了第五大道以及梅西百货等商家被打砸抢的暴力案件。纽约的华人商家们对此感到不安，有人抱怨警察已经对坏人“太软”以及“不管事”，如果被城市“<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%92%A4%E8%B5%84.md#1">撤资</a>”，再继续减少警力，“那谁还敢开店？”</p>
 <h2>* “对坏人松对好人严”</h2>
 <p>在曼哈顿有一家餐馆的董女士自从疫情期间停业后到现在还没有开门，她对目前城市治安状况很害怕。</p>
 <p>“我们感到很害怕，再说也没顾客，不敢开门。我看附近很多商家都钉上木板了。”她抱怨本区警察根本不管事。“他们天天走来走去，喝咖啡啊，什么也不做。”</p>
 <p>这样的情况下，让商家即使看见坏人进门也不敢报警。</p>
 <p>“我们怕报复，你一报警，坏人回头说你这个那个，又叫来卫生局什么的。”但是董女士说，即便对警察不满意，“没有警察怎么行？那也不现实啊，叫我们普通人怎么对付罪犯呢？”</p>
 <p>皇后区一家一元店的老板陈先生与董女士持有同样的态度，对待坏人不得不采取迁就的手段。</p>
-<p>“<ahref="https://github.com/fznrt2606/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>的警察很可怜，没有权利，他们来了也是劝那些坏人离开，他们对坏人太松了，对我们好人严格，这个状态是不正常的。”他说，“我们这里坏人偷东西明偷，你不敢要回来，一点办法没有，好人怕坏人。”</p>
+<p>“<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>的警察很可怜，没有权利，他们来了也是劝那些坏人离开，他们对坏人太松了，对我们好人严格，这个状态是不正常的。”他说，“我们这里坏人偷东西明偷，你不敢要回来，一点办法没有，好人怕坏人。”</p>
 <p>即便这样，陈先生认为，“没有警察绝对不行！那谁还敢开店？”</p>
 <h2>* “一个坏警察不代表其他好警察”</h2>
 <p>对于明州事件，华人商家都认为不应该发生。不过陈先生认为，即使发生了这样的事情，他还是支持警察，因为“一个坏警察不代表其他好警察”。</p>
@@ -27,42 +27,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/4/n12159847.md#1">iPhone若遭抢劫 可锁机追踪并通报警方</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/4/n12162069.md#1">嫌犯自食恶果 抢走苹果手机暴露身处位置</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/5/n12162972.md#1">纽约市长：有组织的犯罪分子抢劫  与抗议无关</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/5/n12164623.md#1">组图：纽约骚乱 世界之都变“木板城”</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/7/n12168514.md#1">纽约警方披露 暴徒趁乱抢劫高档奢侈品</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/7/n12168550.md#1">张林：世界最繁华商业大道 一夜之间变样</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/8/n12169572.md#1">调查员卧底 视频揭Antifa煽动暴力</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/9/n12174010.md#1">【新闻第一现场】卧底秘密拍摄揭Antifa残暴</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/11/n12177066.md#1">中华公所将在两个周五派发免费口罩</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/11/n12177068.md#1">社区看板：华策会免费建筑学徒在线课程招生</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/6/4/n12159847.md#1">iPhone若遭抢劫 可锁机追踪并通报警方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/6/4/n12162069.md#1">嫌犯自食恶果 抢走苹果手机暴露身处位置</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/6/5/n12162972.md#1">纽约市长：有组织的犯罪分子抢劫  与抗议无关</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/6/5/n12164623.md#1">组图：纽约骚乱 世界之都变“木板城”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/6/7/n12168514.md#1">纽约警方披露 暴徒趁乱抢劫高档奢侈品</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/6/7/n12168550.md#1">张林：世界最繁华商业大道 一夜之间变样</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/6/8/n12169572.md#1">调查员卧底 视频揭Antifa煽动暴力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/6/9/n12174010.md#1">【新闻第一现场】卧底秘密拍摄揭Antifa残暴</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740441.md#1">纽约国会第10选区吸引民主党至少6人竞争</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740438.md#1">纽约新选区地图草案 给皇后区选举带来啥变化？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045158.md#1" target="_blank">《苦菜花》人物原型的真实人生（1）</a></li><li><a href="https://github.com/fznrt2606/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/26/n10875809.md#1" target="_blank">曝光610文件 宗教权威人谴中共打压法轮功</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11263424.md#1" target="_blank">【征文】刘晓：古代侠士与侠义精神</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/10/n3655834.md#1" target="_blank">王华：闲谈西方的签名与东方的手印</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/9/n12172382.md#1">中共多架苏恺30战机入侵 台湾空军驱离</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/9/n12174102.md#1">罢韩没过法定门槛？网红讽“韩粉式数学”</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/9/n12173575.md#1">郝海东与蔡霞狠批中共 当局严防民众效仿</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/9/n12173986.md#1">中共逼迫汇丰和英国 蓬佩奥发声明强硬回击</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/9/n12174112.md#1">李克强提“地摊经济”中共地方表态现分裂</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/8/n12171270.md#1">韩国瑜遭罢免后狂呛人 张雅琴：跟共产党真像</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/8/n12171460.md#1">郝海东效应？导演微博谈足球先生当总统遭禁</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/8/n12170284.md#1">吴尊补办延迟16年婚礼 见太太穿婚纱哽咽落泪</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/8/n12170990.md#1">韩国瑜遭高票罢免 黄明志：这是我眼中的台湾</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/10/n12174687.md#1">明道认了当爸 去年登记甜娶王婷萱</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/8/n12169940.md#1">作恶太多 康生曹轶欧夫妇生前遭索命</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/6/8/n12169544.md#1">西班牙特殊小镇 完全被法国领土包围</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/5/23/n12131409.md#1">【馨香雅句】山川异域 风月同天 背后的故事</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/20/5/26/n12137106.md#1">楚昭越姬  为何不说山盟海誓？</a></li>
-<li><a href="https://github.com/fznrt2606/djy/blob/master/gb/15/8/3/n4494980.md#1">曾参劝妻守诚</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fznrt2606/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fznrt2606/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/6/11/n12177059.htm">华裔商家怕撤警 “那谁还敢开店？”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/6/11/n12177059.htm">华裔商家怕撤警 “那谁还敢开店？”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fznrt2606/djy/blob/master/gb/20/6/11/n12177059.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fznrt2606/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fznrt2606/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fznrt2606/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fznrt2606/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fznrt2606/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/20/6/11/n12177059.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
